--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 14 Oct 1998</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> hsdatasoft.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> 8200320838</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : Deesa</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Deesa</li>
                 </ul>
               </div>
               <div class="col-lg-6">
