--- a/index.html
+++ b/index.html
@@ -261,8 +261,7 @@
               <ul>
                 <li>-June 2019-Apr 2020</li>
                 <li>On Python with Machine Learning </li>
-                <li> There I learnt core python to advanced concepts and started towards data-sience and
-                  machine-learning</li>
+                <li> There I learnt core python to advanced concepts and learnt some basic libraries of data science like Numpy, Pandas & Matplotlib</li>
 
 
               </ul>
