--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             <h3 class="resume-title">Educational Training</h3>
             <div class="resume-item">
               <h4>Internships:</h4>
-              <p><em>Grrass Solutions Pvt.Ltd.</em></p>
+              <p><em>grras solutions pvt.ltd.</em></p>
               <h5>-June 2019-Apr 2020</h5>
 
               <ul>
